--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -4547,9 +4547,13 @@ nav.pgNtion { margin: 0 auto;}
   right: 30px;
   bottom: 13px;
 }
+.counterCol h2{ text-align: center !important;}
 .addSection .inner-slider a {
   background: #090808;
   width: 100%;
+}
+div#clockdiv {
+  margin: 0 auto !important;
 }
 .addSection .inner-slider a .card_postInfo {
   width: 60%;
@@ -4558,7 +4562,9 @@ nav.pgNtion { margin: 0 auto;}
   margin-bottom: 50px;
 }
 
-
+#clockdiv {
+  margin: 0 -9px !important;
+}
 
 @media (max-width: 860px) {
 P{
