footer and responsive css file changed

--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -693,7 +693,7 @@
 	.light .auctionBid ul.labelList {
 		color: #000;
 	}
-	.light .accordion button.accordion-button.collapsed {
+	 .accordion button.accordion-button.collapsed {
 		text-align: left;
 	}
 	
