--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -374,7 +374,7 @@ img.addBanner {
 }
 
 .card_postInfo {
-  padding: 25px 0px;
+  padding: 25px;
 }
 
 .card_postInfo h4 {}
@@ -2857,6 +2857,8 @@ li.nav-item.afterLogin span {
   position: absolute;
   bottom: -32px;
   left: calc(50% - 165px);
+  z-index: 9999;
+  cursor: pointer;
 }
 
 .nextArrow span.prev:before {
@@ -2928,6 +2930,7 @@ p.priceDateList span {
 .secondNavbar .navbar-nav li:hover a, .dropdown:hover .dropdown-content a{
   transition: 0.5s;
   color: #f7931a;
+  font-size: 14px;
 }
 
 
@@ -3572,6 +3575,8 @@ table.tikTable tr td:first-child {
 
 video#myVideo {
   width: 100%;
+  height: 100%;
+  object-fit:  cover;
 }
 
 .carLottery .container-fluid,
@@ -4348,7 +4353,7 @@ input.ant-select-selection-search-input {
 }
 
 .topTile {
-  background: #000;
+  /* background: #000; comment as black background was suppose to remove */
   text-align: center;
   padding: 20px 20px;
   margin: 20px auto;
@@ -4510,7 +4515,7 @@ img.g3Logo.W {
 
 .ListDealer .card_postImg.dlr {
   height: 139px;
-  border: 1px solid rgb(180, 180, 180);
+  border-bottom: 1px solid rgb(180, 180, 180);
   padding: 10px;
   background: white;
 }
@@ -4564,6 +4569,114 @@ div#clockdiv {
 
 #clockdiv {
   margin: 0 -9px !important;
+}
+
+/* rahul css */
+
+.prev:hover{
+  color: #f7931b!important;
+
+}
+
+.next:hover{
+  color: #f7931b!important;
+}
+
+ .gridView{
+  margin-right: 9px;
+}
+
+.removeBtn:hover{
+background: #f7931b!important;
+color: white;
+}
+
+.accordion-header button{
+  color: #f7931b!important;;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.scrollDownIc .outer_cover{
+  height: 51px;
+  border: 1px solid white;
+  width: 30px;
+  display: block;
+  border-radius: 15px;
+  position: relative;
+
+}
+
+.scrollDownIc .outer_cover:hover{
+  border: 1px solid #f7931b;
+  
+}
+
+.scrollDownIc .outer_cover small{
+  font-size: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.scrollDownIc .outer_cover .upper{
+ bottom: 8px!important;
+}
+
+.scrollDownIc .outer_cover .lower{
+bottom: 0;
+}
+
+.video_section{
+  height: 85vh;
+}
+
+.lotryBtn{
+  margin: 0!important;
+}
+
+.lotryBtn button{
+  padding: 8px 20px!important;
+}
+
+.ticketFom .form-group{
+  margin: 0;
+  min-height: 40px;
+}
+
+.padd-0{
+  padding: 0!important;
+}
+
+.card_post{
+  border:1px solid rgb(180, 180, 180);
+  margin-bottom: 30px;
+}
+
+.card_postInfo{
+  min-height: 233px;
+}
+
+.light .card_postInfo a:hover{
+color: #f7931b;
+}
+
+.light .topTile h5{
+  color: white;
+}
+
+.inner-slider{
+  transition: 0.4s;
+}
+
+.inner-slider:hover{
+transform: scale(1.04);
+}
+
+.light .gry_btn.active{
+  background: #f7931a;
 }
 
 @media (max-width: 860px) {
