--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -634,13 +634,13 @@
 		padding: 0;
 	}
 
-	.addSection .inner-slider small {
+	/* .addSection .inner-slider small {
 		position: absolute;
 		right: 24px;
 		bottom: 166px;
 		background: black;
 		padding: 5px 15px;
-	}
+	} */
 
 	.addSection .inner-slider .card_postImg.dlr {
 		padding-right: 0;
@@ -1036,27 +1036,19 @@
 		color: #000 !important;
 	}
 
-	a.nav-link.navActive {
-		text-align: left !important;
-		color: #000;
-	}
-
-	.iconMb .dropdown-content {
-		left: 22px;
-	}
-
-	.modal-title {
-		font-size: 18px;
-		padding-left: 16px;
-		padding-bottom: 10px;
-	}
-	p.forOction {	right: 13px;}
+	a.nav-link.navActive {text-align: left !important;color: #000;}
+	.iconMb .dropdown-content {	left: 22px;	}
+	.modal-title {font-size: 18px; padding-left: 16px;	padding-bottom: 10px;}
+	p.forOction {right: 13px;}
 	.postTopOption {margin-bottom: 25px;}
-	.ptb_80 {padding-bottom: 35px;	}
+	.ptb_80 {padding-bottom: 35px;}
 	ul.postTopOption button.gry_btn{width: 100%;}
-	h4.modal-title.forg {
-		padding-left: 0;
-	}
+	h4.modal-title.forg {padding-left: 0;}
+	.addSection .inner-slider a .card_postInfo {width: 100%;}
+	.verticle .galleryImgSect {	min-height: 250px;}
+	.col-12 .galleryImgSect {height: 150px;}
+	.verticle {	padding: 5px;}
+	.gallery .mt-50 {margin-top: 5px;}
 }
 
 @media (max-width: 575px) {
