--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -4851,6 +4851,14 @@ display: none;
   justify-content: space-between;
 }
 .light .gry_btn {  background-color: #f7931a !important;}
+.light .auctionLive .card_post {
+  box-shadow: 1px 15px 21px 1px #00000024;
+  margin-bottom: 15px;
+}
+.auctionLive .card_post {
+  box-shadow: -1px 15px 61px 11px #ffffff24;
+  margin-bottom: 15px;
+}
 
 @media (max-width: 860px) {
 P{
