--- a/src/Components/Pages/NotFoundPage.css
+++ b/src/Components/Pages/NotFoundPage.css
@@ -11,6 +11,33 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+h3.comQut {
+  font-size: 22px;
+  padding-top: 20px;
+}
+.inner-content.mt-50 h1.animate-charcter {
+  margin: 30px;
+}
+.containerSec.comingSoon {
+  height: 100vh;
+  vertical-align: middle;
+  justify-content: center;
+  align-items: center !important;
+}
+.comingSoon .animate-charcter{
+  background-image: linear-gradient( -225deg, #f79219 0%, #ffffff 29%, #ff1361 67%, #fff800 100% );
+}
+.comingSoon h1.animate-charcter {
+  font-size: 66px !important;
+}
+
+.comingSoon h3.comQut {
+  font-size: 15px;
+  padding-top: 30px;
+  line-height: 26px;
+}
+
 @media (max-width: 767px) {
   .background .ground {
     height: 0vh;
