--- a/src/Components/Pages/NotFoundPage.css
+++ b/src/Components/Pages/NotFoundPage.css
@@ -38,6 +38,14 @@ h3.comQut {
   padding-top: 30px;
 }
 
+@media ( max-width:1440px ){
+  .comingSoon h3.comQut {
+    font-size: 20px;
+    line-height: 30px;
+    padding-top: 30px;
+}
+}
+
 @media (max-width: 767px) {
   .background .ground {
     height: 0vh;
