--- a/src/Assets/css/responsive.css
+++ b/src/Assets/css/responsive.css
@@ -64,7 +64,7 @@
 	}
 
 	.toNv {
-		width: 60%;
+		/* width: 60%; */
 	}
 
 	.toNv .navbar-nav .nav-link {
@@ -1058,6 +1058,10 @@
 
 @media (max-width: 575px) {
 
+	.mainImg{
+		height: unset;
+	}
+
 	.prev-arrow:before,
 	.next-arrow:after {
 		width: 50px;
@@ -1156,6 +1160,7 @@
 	.heroSection {
 		background-size: cover;
 		background-position-y: unset;
+		
 	}
 
 	.heroText h1 {
@@ -1187,11 +1192,6 @@
 		height: 100px;
 	}
 
-	.sidebarPost .sidebarPost_Img,
-	.imgGalleryRow .fancyCol,
-	.videoGalleryRow .fancyCol {
-		/*height: 120px;*/
-	}
 
 	.orderImg {
 		width: 100%;
