--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5091,7 +5091,7 @@ html {
 }
 
 .dark .backgroun_register {
-  background-color: black;
+  background-color: rgb(39, 38, 38);
 }
 
 .light .backgroun_register {
