--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -3871,6 +3871,19 @@ td.actionBtn button {
   margin: 0 8px;
 
 }
+#linkTag {
+
+  background: #f7931b;
+  color: #fff;
+  padding: 2px 6px;
+  border-radius: 12px;
+  border: none;
+  margin: 2px;
+  text-align: right;
+  font-size: 12px;
+  margin: 0 8px;
+
+}
 
 td.actionBtn {
   display: flex;
