--- a/src/Components/Pages/shopingStore/Shopdetail.css
+++ b/src/Components/Pages/shopingStore/Shopdetail.css
@@ -12,10 +12,13 @@ p.Msg { font-size: 12px; color: #f7931b; position: relative; top: -10px;}
 
 .sliderSec a.carousel-control-prev span.visually-hidden, .sliderSec a.carousel-control-next span.visually-hidden {display: none;}
 .rightSec h2 { font-size: 25px;}
-.sliderSec {  padding: 30px 10px;}
+.sliderSec {  padding: 30px 10px;width: 100%;}
 h2.title_combo { font-size: 30px;}
 h5.catagories { font-size: 11px;}
 
+.sliderSec img{
+  width:85%
+}
 @media (max-width:1920px){
     .sliderSec .carousel-inner { width: 100%; height: 450px; overflow: hidden; vertical-align: middle;}
   }
