--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5003,7 +5003,7 @@ html {
 }
 
 .card_post.Inventory.auction.ffff {
-  box-shadow: 1px 15px 156px 1px #a8a8a83d;
+  box-shadow: 1px 15px 21px 1px #00000024;
   margin-bottom: 30px;
 }
 
@@ -5496,4 +5496,21 @@ input[type=file] {
 
 .classifiedAdds ul.labelList li{
 border-right: unset!important;
+}
+
+.common_image_height{
+  min-width: 428px;
+    max-height: 241px !important;
+    object-fit: cover;
+    overflow: hidden !important;
+
+}
+
+.height_image{
+  height: 265px!important;
+}
+
+.light .box_shadow_common{
+box-shadow:  1px 15px 21px 1px #00000024;
+margin-bottom: 20px;
 }
