--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5511,6 +5511,10 @@ border-right: unset!important;
 }
 
 .light .box_shadow_common{
-box-shadow:  1px 15px 21px 1px #00000024;
-margin-bottom: 20px;
+box-shadow:  1px 15px 21px 1px #00000024!important;
+margin-bottom: 20px!important;
+}
+
+.mt-30{
+  margin-top: 30px!important;
 }
