--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,9 @@
           margin-top: -11px;
   }
 
-#scrollable{
+/* #scrollable{
             width: 111%;
-            /* height: 28%; */
+            
             overflow-x: scroll;
             }
 
@@ -46,5 +46,5 @@
 
 #hr{
   width: 111%;
-}
+} */
 
